# plonky2-gpu

./: README.md
cuda/: ArithmeticGate.cuh  BaseSumGate.cuh  CMakeLists.txt  Cargo.toml  ComparisonGate.cuh  ConstantGate.cuh  NoopGate.cuh  PoseidonGate.cuh  PublicInputGate.cuh  RandomAccessGate.cuh  U32AddManyGate.cuh  U32ArithmeticGate.cuh  U32RangeCheckGate.cuh  U32SubtractionGate.cuh  build.rs  def.cuh  gates-def.cuh  plonky2_gpu.cu  plonky2_gpu_impl.cuh  test.cu
cuda/src/: lib.rs
field/: Cargo.toml
field/src/: fft.rs  goldilocks_field.rs  zero_poly_coset.rs
field/src/polynomial/: mod.rs
insertion/src/: insertion_gate.rs
plonky2/: Cargo.toml
plonky2/examples/: square_root.rs
plonky2/src/: lib.rs
plonky2/src/fri/: oracle.rs  prover.rs
plonky2/src/gadgets/: hash.rs
plonky2/src/gates/: arithmetic_base.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  exponentiation.rs  gate.rs  high_degree_interpolation.rs  low_degree_interpolation.rs  multiplication_extension.rs  noop.rs  poseidon.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs  selectors.rs
plonky2/src/hash/: keccak.rs  merkle_proofs.rs  merkle_tree.rs  poseidon.rs
plonky2/src/iop/: generator.rs  witness.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs  config.rs  permutation_argument.rs  proof.rs  prover.rs  vanishing_poly.rs  verifier.rs
plonky2/src/recursion/: cyclic_recursion.rs  recursive_verifier.rs  tree_recursion.rs
u32/src/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  range_check_u32.rs  subtraction_u32.rs
(+5 files in other folders)
